test/bad/nonlinear3.qp
-- This test should fail because a qubit is used twice in a boxed function.
let b = box[qubit] (fun q -> unbox (g_cnot true) (q,q)) ;;

